# hs-chip8-emu

./: README.md  hs-chip8-emu.cabal  stack.yaml
app/: Main.hs
src/: CHIP8.hs
src/CHIP8/: Prelude.hs  Types.hs
